@@ -225,7 +225,7 @@ Return the quantiles for a given set of data
 [para]
 [arg_def list data] - List of raw data values
 [para]
-[arg_def float confidence] - Confidence level (0.95 or 0.99 for instance)
+[arg_def float confidence] - Confidence level (0.95 or 0.99 for instance) or a list of confidence levels.
 [para]
 [list_end]
 [para]
@@ -236,7 +236,7 @@ call with two arguments)
 [list_begin arguments]
 [arg_def list limits] - List of upper limits from histogram
 [arg_def list counts] - List of counts for for each interval in histogram
-[arg_def float confidence] -  Confidence level (0.95 or 0.99 for instance)
+[arg_def float confidence] -  Confidence level (0.95 or 0.99 for instance) or a list of confidence levels.
 [list_end]
 [para]
 
