@@ -1,8 +1,11 @@
 2014-09-27  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* statistics.tcl: Bump version to 0.9.2
+	* statistics.test: Add tests for all pdf-* and cdf-* procedures, crude tests for random-* procedures
+	* pdf_stat.tcl: Fix a typo (cdf-uniform) and fix inadvertent integer divisions should arguments be integer
 	* special.tcl: Adding Christian's implementation of the inverse normal distribution function (invnorm)
 	* special.test: Adding test case for this new function
 	* special.man: Describing invnorm plus a correction in the overview (ierfc_n is not implemented)
-	* pkgIndex.tcl: Bumping version of math::special package to 0.3.0
+	* pkgIndex.tcl: Bumping version of math::special package to 0.3.0, of math::statistics to 0.9.2
 
 2014-09-26  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* pdf-stat.tcl: Solve ticket UUID a6d69107d5, a typo in the pdf-uniform procedure
